--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css_files/reset.css">
+    <link rel="stylesheet" href="css_files/style.css">
     <title>Document</title>
 </head>
 <body style="background-color:#171717;">
     
     <header>
         <div class="logo">
-            <img src="СК_ИНФРАСТРУКТУРА_logo_2 2.png" alt="" class="img-logo">
+            <img src="img/СК_ИНФРАСТРУКТУРА_logo_2 2.png" alt="" class="img-logo">
         </div>
         <div class="back-call">
-            <img src="icons8_phone_2 1.png" alt="" class="back-call-img">
+            <img src="img/icons8_phone_2 1.png" alt="" class="back-call-img">
             <a class="back-call-text" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Обратный звонок</a>
         </div>
         <div class="rec"></div>
@@ -58,24 +58,24 @@
                 <p class="main-text3">Наши клиенты и проекты</p>
             </div>
             <div class="grid5">
-                <div class="item8"><img src="image 1.png" alt="" class="img1"></div>
+                <div class="item8"><img src="img/image 1.png" alt="" class="img1"></div>
                 <div class="item9">
-                    <img src="image 3.png" alt="" class="img2-1">
-                    <img src="image 2.png" alt="" class="img2-2">
+                    <img src="img/image 3.png" alt="" class="img2-1">
+                    <img src="img/image 2.png" alt="" class="img2-2">
                     <p class="text-item9">Работы по монтажу
                         прифундаментного дренажа
                         по адресу:
                         ЛО, Всеволожский р-н, 
                         «Ручьи»</p>
                 </div>
-                <div class="item10"><img src="image 6.png" alt="" class="img3"></div>
-                <div class="item11"><img src="image 6.png" alt="" class="img4"></div>
+                <div class="item10"><img src="img/image 6.png" alt="" class="img3"></div>
+                <div class="item11"><img src="img/image 6.png" alt="" class="img4"></div>
 
 
                 <!-- мега кринж но у меня из-за работы не было времени векторы из фигмы вставлять сюда -->
-                <div class="item12"><img src="asdadas.PNG" alt="" class="img5"></div>
+                <div class="item12"><img src="img/asdadas.PNG" alt="" class="img5"></div>
 
-                <div class="item13"><img src="image 1.png" alt="" class="img6"></div>
+                <div class="item13"><img src="img/image 1.png" alt="" class="img6"></div>
             </div>
             <div class="button">
                 <p class="txt-button">Все проекты</p>
